--- a/example/package.json
+++ b/example/package.json
@@ -4,11 +4,13 @@
   "description": "an example app that uses octavo",
   "main": "index.js",
   "scripts": {
-    "start": "next dev"
+    "start": "next dev",
+    "build": "next build"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next/bundle-analyzer": "^9.5.2",
     "next": "^9.5.1",
     "next-transpile-modules": "^4.0.2",
     "octavo": "file:../",
