--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "globby": "^11.0.1",
     "gray-matter": "^4.0.2",
     "json5": "^2.1.3",
-    "next-mdx-remote": "0.6.0",
+    "loader-utils": "^2.0.0",
+    "next-mdx-remote": "1.0.0",
     "prebuild-webpack-plugin": "^1.1.1",
     "query-string": "^5.1.1",
     "react-live": "^2.2.2"
