--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.2",
     "json5": "^2.1.3",
     "loader-utils": "^2.0.0",
+    "next-images": "^1.4.1",
     "next-mdx-remote": "1.0.0",
     "prebuild-webpack-plugin": "^1.1.1",
     "query-string": "^5.1.1",
