--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "fsexists": "^1.0.1",
     "globby": "^11.0.1",
     "gray-matter": "^4.0.2",
-    "json5": "^2.1.3",
     "loader-utils": "^2.0.0",
     "next-mdx-remote": "1.0.0",
     "query-string": "^5.1.1",
-    "react-live": "^2.2.2"
+    "react-live": "^2.2.2",
+    "require-from-string": "^2.0.2"
   },
   "devDependencies": {
     "jest": "^26.4.2",
