--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@hashicorp/octavo",
+  "name": "swingset",
   "description": "drop-in component library and documentation pages for next.js",
   "version": "0.2.0",
   "author": "Jeff Escalante",
   "bugs": {
-    "url": "https://github.com/jescalan/octavo/issues"
+    "url": "https://github.com/hashicorp/swingset/issues"
   },
   "dependencies": {
     "copy-text-to-clipboard": "^2.2.0",
@@ -18,10 +18,10 @@
     "require-from-string": "^2.0.2"
   },
   "devDependencies": {
-    "jest": "^26.4.2",
+    "jest": "^26.6.1",
     "release": "^6.3.0"
   },
-  "homepage": "https://github.com/jescalan/octavo#readme",
+  "homepage": "https://github.com/hashicorp/swingset#readme",
   "keywords": [
     "component",
     "component-library",
@@ -42,7 +42,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jescalan/octavo.git"
+    "url": "git+https://github.com/hashicorp/swingset.git"
   },
   "scripts": {
     "example": "cd example && npm start",
