--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -13,7 +13,7 @@
     "@next/bundle-analyzer": "^9.5.2",
     "next": "^9.5.1",
     "next-transpile-modules": "^4.1.0",
-    "swingset": "file:../",
+    "swingset": "file:../../",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
