--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
   },
   "scripts": {
     "example": "cd examples/basic && [ ! -d 'node_modules' ] && npm i || npm start",
-    "release:major": "release major && npm publish",
-    "release:minor": "release minor && npm publish",
-    "release:patch": "release patch && npm publish",
+    "release:major": "release major && npm publish .",
+    "release:minor": "release minor && npm publish .",
+    "release:patch": "release patch && npm publish .",
     "release:pre": "release pre canary && npm publish --tag=canary",
     "test": "jest"
   }
