Rough in docs pages implementation

--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -13,8 +13,8 @@
     "@next/bundle-analyzer": "^9.5.2",
     "next": "^9.5.3",
     "next-transpile-modules": "^4.1.0",
-    "swingset": "file:../../",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swingset": "file:.yalc/swingset"
   }
 }
