add customMeta config

--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -14,6 +14,7 @@
     "next": "^9.5.3",
     "next-transpile-modules": "^4.1.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swingset": "file:.yalc/swingset"
   }
 }
