--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "url": "https://github.com/hashicorp/swingset/issues"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "copy-text-to-clipboard": "^2.2.0",
     "fsexists": "^1.0.1",
-    "globby": "^11.0.1",
-    "gray-matter": "^4.0.2",
+    "globby": "^11.0.3",
+    "gray-matter": "^4.0.3",
     "loader-utils": "^2.0.0",
     "marked": "^1.2.2",
-    "next-mdx-remote": "3.0.1",
+    "next-mdx-remote": "3.0.2",
     "query-string": "^5.1.1",
-    "react-live": "^2.2.2",
-    "require-from-string": "^2.0.2"
+    "react-live": "^2.2.3",
+    "require-from-string": "^2.0.2",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "jest": "^26.6.1",
