--- a/examples/peer-components/package.json
+++ b/examples/peer-components/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@next/bundle-analyzer": "^9.5.2",
-    "next": "^9.5.1",
-    "next-transpile-modules": "^4.1.0",
-    "swingset": "file:../../",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@next/bundle-analyzer": "^12.1.0",
+    "next": "^12.1.0",
+    "next-transpile-modules": "^9.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "swingset": "file:.yalc/swingset"
   }
 }
