--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "gray-matter": "^4.0.3",
     "loader-utils": "^2.0.0",
     "marked": "^1.2.2",
-    "next-mdx-remote": "3.0.4",
+    "next-mdx-remote": "^4.0.0",
     "query-string": "^5.1.1",
-    "react-live": "^2.3.0",
+    "react-live": "^3.0.0",
     "require-from-string": "^2.0.2",
     "slugify": "^1.6.0"
   },
@@ -35,11 +35,8 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "next": ">=9.x",
-    "next-transpile-modules": "^4.1.0",
-    "react": ">=16.x",
-    "react-dom": ">=16.x",
-    "webpack": ">=4.x"
+    "react": ">=16.x <=17.x",
+    "react-dom": ">=16.x <=17.x"
   },
   "publishConfig": {
     "access": "public"
