--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -16,5 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "swingset": "file:.yalc/swingset"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.3"
   }
 }
