--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@structured-types/api": "^3.46.11",
+    "@structured-types/react-plugin": "^3.46.12",
     "classnames": "^2.3.1",
     "copy-text-to-clipboard": "^2.2.0",
     "fsexists": "^1.0.1",
@@ -22,6 +23,8 @@
     "slugify": "^1.6.0"
   },
   "devDependencies": {
+    "@swc-node/jest": "^1.5.2",
+    "@types/jest": "^27.5.2",
     "@types/query-string": "^5.1.0",
     "@types/require-from-string": "^1.2.1",
     "jest": "^27.0.6",
