--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "slugify": "^1.6.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.7",
+    "@changesets/cli": "^2.25.2",
     "@types/query-string": "^5.1.0",
     "@types/require-from-string": "^1.2.1",
     "jest": "^27.0.6",
@@ -57,6 +59,7 @@
     "release:minor": "release minor && npm publish .",
     "release:patch": "release patch && npm publish .",
     "release:pre": "release pre canary && npm publish --tag=canary",
+    "release:canary": "changeset publish --tag canary",
     "test": "jest"
   }
 }
