--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/query-string": "^5.1.0",
     "@types/require-from-string": "^1.2.1",
     "jest": "^27.0.6",
-    "next": "^12.1.0",
+    "next": "^13.0.6",
     "release": "^6.3.0",
     "typescript": "^4.6.3"
   },
@@ -41,8 +41,9 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "react": ">=16.x <=17.x",
-    "react-dom": ">=16.x <=17.x"
+    "next": ">=12.x <=13.x",
+    "react": ">=16.x <=18.x",
+    "react-dom": ">=16.x <=18.x"
   },
   "publishConfig": {
     "access": "public"
