--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/require-from-string": "^1.2.1",
     "jest": "^27.0.6",
     "next": "^13.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "release": "^6.3.0",
     "typescript": "^4.6.3"
   },
