--- a/package.json
+++ b/package.json
@@ -57,10 +57,7 @@
     "example": "cd examples/basic && [ ! -d 'node_modules' ] && npm i || npm start",
     "build": "rm -rf ./dist && rollup -c rollup.config.js",
     "typecheck": "tsc --noEmit",
-    "release:major": "release major && npm publish .",
-    "release:minor": "release minor && npm publish .",
-    "release:patch": "release patch && npm publish .",
-    "release:pre": "release pre canary && npm publish --tag=canary",
+    "release": "changeset publish",
     "release:canary": "changeset publish --tag canary",
     "test": "jest"
   }
