--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "swingset",
+  "name": "swingset-root",
   "description": "drop-in component library and documentation pages for next.js",
   "version": "0.17.0",
   "author": "Jeff Escalante",
   "bugs": {
     "url": "https://github.com/hashicorp/swingset/issues"
   },
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "dependencies": {
     "@reach/visually-hidden": "^0.18.0",
     "classnames": "^2.3.1",
@@ -30,6 +34,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "release": "^6.3.0",
+    "tsup": "^6.6.3",
+    "turbo": "^1.7.4",
     "typescript": "^4.6.3"
   },
   "homepage": "https://github.com/hashicorp/swingset#readme",
