--- a/packages/swingset/package.json
+++ b/packages/swingset/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "^2.3.0",
+    "directory-tree": "^3.5.1",
     "github-slugger": "^2.0.0",
     "globby": "^13.1.3",
     "next-mdx-remote": "^4.3.0",
@@ -52,6 +53,10 @@
       "import": "./dist/default-theme/index.js",
       "types": "./dist/default-theme/index.d.ts"
     },
-    "./style.css": "./style.css"
+    "./style.css": "./style.css",
+    "./*": {
+      "import": "./dist/*.js",
+      "types": "./dist/*.d.ts"
+    }
   }
 }
