--- a/packages/swingset/tsconfig.json
+++ b/packages/swingset/tsconfig.json
@@ -13,5 +13,7 @@
     "moduleResolution": "node",
     "types": ["vitest/globals", "webpack-env"],
     "resolveJsonModule": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["dist/**/*"]
 }
