--- a/packages/swingset/package.json
+++ b/packages/swingset/package.json
@@ -3,10 +3,12 @@
   "version": "0.17.0",
   "type": "module",
   "scripts": {
-    "build": "tsup",
+    "build:js": "tsup",
     "build:styles": "postcss src/default-theme/css/styles.css -o style.css --verbose",
-    "dev": "tsup --watch",
+    "build": "concurrently npm:build:*",
+    "dev:js": "tsup --watch",
     "dev:styles": "TAILWIND_MODE=watch postcss src/default-theme/css/styles.css -o style.css --verbose --watch",
+    "dev": "concurrently npm:dev:*",
     "test": "vitest run"
   },
   "dependencies": {
@@ -15,6 +17,7 @@
     "github-slugger": "^2.0.0",
     "globby": "^13.1.3",
     "next-mdx-remote": "^4.3.0",
+    "readdirp": "^3.6.0",
     "vfile": "^5.3.7",
     "vfile-matter": "^4.0.1"
   },
