remove old files

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
       "outputs": ["dist/**/*"]
     },
     "dev": {
-      "cache": false
+      "cache": false,
+      "persistent": true
     }
   }
 }
