--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -10,6 +10,7 @@
     "next": "^13.2.3",
     "react": "*",
     "react-dom": "*",
-    "swingset": "file:../../packages/swingset"
+    "swingset": "file:../../packages/swingset",
+    "swingset-theme-hashicorp": "file:../../packages/swingset-theme-hashicorp"
   }
 }
