--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   actionlint:
-    runs-on: ['self-hosted', 'linux', 'small']
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
       - name: 'Check workflow files'
-        uses: docker://docker.mirror.hashicorp.services/rhysd/actionlint:latest
+        uses: docker://rhysd/actionlint:1.6.23
