--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -4,10 +4,13 @@ on:
     branches: [main]
   pull_request:
 
+permissions:
+  contents: none
+
 jobs:
   actionlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
       - name: 'Check workflow files'
-        uses: docker://rhysd/actionlint:1.6.23
+        uses: docker://docker.mirror.hashicorp.services/rhysd/actionlint:latest
