fix npm package output

--- a/packages/swingset-theme-hashicorp/package.json
+++ b/packages/swingset-theme-hashicorp/package.json
@@ -22,6 +22,10 @@
       "types": "./dist/*.d.ts"
     }
   },
+  "files": [
+    "./dist",
+    "./style.css"
+  ],
   "peerDependencies": {
     "swingset": "*"
   },
