--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "examples/*"
   ],
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.7",
-    "@changesets/cli": "^2.25.2",
-    "concurrently": "^7.6.0",
-    "jest": "^27.0.6",
-    "next": "^13.0.6",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.1",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "concurrently": "^8.0.1",
+    "jest": "^29.5.0",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "release": "^6.3.0",
-    "tsup": "^6.6.3",
-    "turbo": "^1.8.2",
-    "typescript": "^4.9.5"
+    "tsup": "^6.7.0",
+    "turbo": "^1.10.0",
+    "typescript": "^5.0.4"
   },
   "homepage": "https://github.com/hashicorp/swingset#readme",
   "keywords": [
