--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
           key: "${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}"
           restore-keys: '${{ runner.os }}-node-'
       - run: npm ci
-      - run: npm run test
+      - run: npx turbo run test --concurrency 1 --continue
