use pathSeparator for cross-platform support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "node-terminal",
       "request": "launch",
       "command": "npx next dev",
-      "cwd": "${workspaceFolder}/examples/basic"
+      "cwd": "${workspaceFolder}${pathSeparator}examples${pathSeparator}basic"
     }
   ]
 }
