--- a/packages/swingset-theme-hashicorp/tsconfig.json
+++ b/packages/swingset-theme-hashicorp/tsconfig.json
@@ -14,6 +14,6 @@
     "types": ["vitest/globals", "webpack-env"],
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "stylintrc.js"],
   "exclude": ["dist/**/*"]
 }
