--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,9 @@
       "cache": false,
       "persistent": true
     },
-    "test": {}
+    "test": {},
+    "lint": {
+      "cache": false
+    }
   }
 }
