--- a/packages/swingset/package.json
+++ b/packages/swingset/package.json
@@ -14,6 +14,7 @@
   "bin": "./dist/cli/index.js",
   "dependencies": {
     "@mdx-js/mdx": "^2.3.0",
+    "detect-package-manager": "^2.0.1",
     "github-slugger": "^2.0.0",
     "globby": "^13.1.4",
     "react-docgen": "^6.0.0-beta.5",
