--- a/packages/swingset-theme-hashicorp/package.json
+++ b/packages/swingset-theme-hashicorp/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@hashicorp/flight-icons": "^2.14.0",
     "class-variance-authority": "^0.6.0"
   }
 }
