--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "release": "changeset publish",
     "release:canary": "changeset publish --tag canary",
     "test": "npx turbo run test --concurrency 1 --continue"
+  },
+  "dependencies": {
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0"
   }
 }
